[package]
name = "GuiNistRs"
version = "0.1.0"
edition = "2021"
authors = ["Sergey Negodyaev <negodyaev.sergey@outlook.com>"]
description = "This crate implements GUI wrapper for NISTRS"
readme = "README.md"
repository = "https://github.com/Omnissi/GUINISTRS"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
egui_extras = "0.19.0" 
eframe = "0.19.0"
wgpu = "0.14.0"
rayon = "1.6.0"
lazy_static = "1.4.0"
statrs = "0.16.0"
native-dialog = "0.6.3"
nistrs = "0.1.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"


[features]
wgpu = ["eframe/wgpu"]
